--- a/index.html
+++ b/index.html
@@ -4,35 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <!-- <style>
-    img {width:250px; height:250px;}
-  </style> -->
+ 
   <title>Document</title>
 </head>
 <body class="bg-secondary">
 
-  <div class="container bg-info text-center pt-5 pb-5 rounded">
+  <div class="card bg-info text-center p-5 my-5 mx-2 rounded shadow-lg">
     <h1 class="text-white">Examples of API Data</h1>
     <h4 class="text-white">VIA Fetch()</h4>
 
-    <div class="btn-group">
-      <input class="btn-md btn-primary mr-4" id="users" type="button" value="Users">
-      <input class="btn-md btn-warning mr-4" id="comments" type="button" value="Comments">
-      <input class="btn-md btn-success" id="photos" type="button" value="Photos">
+    <div class="btn-group mx-auto">
+      <input class="btn-md btn-primary mr-4 shadow" id="users" type="button" value="Users">
+      <input class="btn-md btn-warning mr-4 shadow" id="comments" type="button" value="Comments">
+      <input class="btn-md btn-success shadow" id="photos" type="button" value="Photos">
     </div><hr>
 
-    <div class="row">
+    <div class="row p-0">
       <div class="col-md">
         <p class="users text-white text-center" hidden>jsonplaceholder.typicode.com</p>
         <h4 class="photos text-white text-center" hidden>dog.ceo</h4>
-        <ol id="output" class="px-5 text-white text-left"></ol>
+        <ol id="output" class="px-1 text-white text-left"></ol>
       </div>
      
     </div>
   </div>
-
-
-
 
 
   <script src="app.js"></script>
