--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body class="bg-secondary">
 
   <div class="card bg-info text-center p-5 my-5 mx-2 rounded shadow-lg">
-    <h1 class="text-white">Examples of API Data</h1>
-    <h4 class="text-white">VIA Fetch()</h4>
+    <h1 class="text-white">Fetch() Examples of API Data</h1>
+    <br>
 
     <div class="btn-group mx-auto">
       <input class="btn-md btn-primary mr-4 shadow" id="users" type="button" value="Users">
@@ -21,9 +21,13 @@
 
     <div class="row p-0">
       <div class="col-md">
-        <p class="users text-white text-center" hidden>jsonplaceholder.typicode.com</p>
-        <h4 class="photos text-white text-center" hidden>dog.ceo</h4>
-        <ol id="output" class="px-1 text-white text-left"></ol>
+        <a href="https://jsonplaceholder.typicode.com/" target="_blank" class="text-decoration-none">
+          <p class="users text-white text-center" hidden>jsonplaceholder.typicode.com</p>
+        </a>
+        <a href="https://dog.ceo/dog-api/" target="_blank" class="text-decoration-none">
+          <h4 class="photos text-white text-center" hidden>dog.ceo</h4>
+        </a>
+        <ul id="output" class="px-1 text-white text-left list-unstyled"></ul>
       </div>
      
     </div>
