--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
  
-  <title>Document</title>
+  <title>Fetch API Examples</title>
 </head>
 <body class="bg-secondary">
 
-  <div class="card bg-info text-center p-5 my-5 mx-2 rounded shadow-lg">
-    <h1 class="text-white">Fetch() Examples of API Data</h1>
+  <div class="card text-center p-5 my-5 mx-2 rounded shadow-lg" style="background-color: rgb(32, 180, 180);">
+    <h1 style="color: rgb(38, 233, 233);">{<span class="font-weight-bold text-white">fetch API</span>}</h1>
+    <h4 class="text-white font-italic">examples</h4>
     <br>
 
-    <div class="btn-group mx-auto">
-      <input class="btn-md btn-primary mr-4 shadow" id="users" type="button" value="Users">
-      <input class="btn-md btn-warning mr-4 shadow" id="comments" type="button" value="Comments">
-      <input class="btn-md btn-success shadow" id="photos" type="button" value="Photos">
+    <div class="mx-auto">
+      <button class="btn btn-primary mr-4 shadow" id="users">Users</button>
+      <button class="btn btn-warning mr-4 shadow" id="comments">Comments</button>
+      <button class="btn btn-success shadow" id="photos">Photos</button>
     </div><hr>
 
     <div class="row p-0">
